Update to AspNetCore 2.0.0 Scheme has moved to the RemoteAuthenticationHandler Remove AuthenticationFailed and MessageReceived events. Target netstandard2.0 in the library   - with references to net 4.7 libraries. removed SignOut - (its a todo) Add WsFederationPostConfigureOptions (this is almost certainly the wrong way to do this ... I'll fix this soonish). Move ADFS configuration to the JSON configuration file.

--- a/Sample/appsettings.json
+++ b/Sample/appsettings.json
@@ -4,5 +4,12 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ADFS": {
+    "MetadataAddress": "https://login.windows.net/96708752-4aec-4318-beca-c25ff9bffc1f/FederationMetadata/2007-06/FederationMetadata.xml",
+    "Wtrealm": "https://cdrobisonxactware.onmicrosoft.com/eb81d25f-9da5-4ed9-af4d-709769a91c6a",
+    "Wreply": "https://localhost/signin-wsfed",
+    "SignInScheme": "Cookies",
+    "CallbackPath": "/signin-wsfed"
   }
 }
