Fix relative path for net4.7 build references.

--- a/AspNetCore.Authentication.WsFederation/AspNetCore.Authentication.WsFederation.csproj
+++ b/AspNetCore.Authentication.WsFederation/AspNetCore.Authentication.WsFederation.csproj
@@ -21,10 +21,10 @@
 
   <ItemGroup>
     <Reference Include="System.IdentityModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7\System.IdentityModel.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7\System.IdentityModel.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest">
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7\System.Net.Http.WebRequest.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7\System.Net.Http.WebRequest.dll</HintPath>
     </Reference>
   </ItemGroup>
 
